# yzta-p2p-rag-based-chatbot-project

./: .env.example  .gitignore  README.md  docker-compose.yml  start-backend.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  run_server.py
backend/app/ai/: follow_up.py  llm.py  models.py
backend/app/ai/agent/: agents.py  document_agent.py  summarizer_agent.py
backend/app/ai/rag/: chromaClient.py
backend/app/ai/tools/: document_tools.py
backend/app/api/: chat_routes.py  conversation_routes.py  upload_routes.py
backend/app/api/schema/: chatSchema.py
backend/app/core/: config.py
backend/app/db/: conversation_service.py  database.py
backend/app/utils/: chat_utils.py
frontend/: Dockerfile  package-lock.json
frontend/app/: layout-context.ts  layout.tsx
frontend/app/chat/components/: ChatComponent.tsx  FollowUpChips.tsx  MessageBubble.tsx  MessageInput.tsx  SourcePanel.tsx  SparklesIcon.tsx
frontend/app/chat/hooks/: useChatActions.ts  useStreamChat.ts
frontend/app/chat/types/: chat.types.ts
frontend/app/components/: AgentSelector.tsx  DocumentUpload.tsx  NewChatButton.tsx  SessionListItem.tsx  SiderComponent.tsx
